--- a/style.css
+++ b/style.css
@@ -1,37 +1,43 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 /*  font-family: 'Open Sans', sans-serif;*/
 
-body{
-    background-color: #14213d;
-    margin: 0;
-    
-}
-.container li{
-    list-style: none;
+body {
+  background-color: #14213d;
+  margin: 0;
 }
 
-.container{
-    border:  2px solid #fca311;
-    width: 400px;
-    height: 100px;
-    position: relative;
-    left: 720px;
-    top: 400px;
+.container li {
+  list-style: none;
 }
-#mainm{
-    font-family: 'Open Sans', sans-serif;
-    color: #e63946;
-    font-size: 25px;
-    padding-left: 5px;
-    padding-top: 15px;
+
+.container {
+  width: 100%;
+  height: 100%;
 }
-.container:hover{
-    transition: 2s;
-    border-radius: 15px;
-    border-color: #43aa8b;
-    background-color: #43aa8b;
+
+li#mainm {
+  border: 2px solid #fca311;
+  width: 400px;
+  padding: 40px;
+  position: relative;
+  left: 720px;
+  top: 400px;
 }
-#mainm:hover{
-    color: white;
+
+#mainm {
+  font-family: 'Open Sans', sans-serif;
+  color: #e63946;
+  font-size: 25px;
+  padding-left: 5px;
+  padding-top: 15px;
+  text-align: center;
+}
+
+#mainm:hover {
+  transition: 2s;
+  border-radius: 15px;
+  border-color: #43aa8b;
+  color: white;
+  background-color: #43aa8b;
 }
