--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 li#mainm {
-  border: 2px solid #fca311;
+  border: 2px solid #e63946;
   width: 400px;
   padding: 40px;
   position: relative;
