--- a/style.css
+++ b/style.css
@@ -14,15 +14,16 @@ body {
 .container {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 li#mainm {
   border: 2px solid #e63946;
-  width: 400px;
-  padding: 40px;
+  width: 20em;
+  padding: 2em;
   position: relative;
-  left: 720px;
-  top: 400px;
+  left: 25em;
+  top: 15em;
 }
 
 #mainm {
