--- a/style.css
+++ b/style.css
@@ -1,44 +1,63 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,100;1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
-/*  font-family: 'Open Sans', sans-serif;*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: black;
+    font-family: 'Fira Sans', sans-serif;
+}
 
 body {
-  background-color: #14213d;
-  margin: 0;
+    background-color: #b36a5e;
+   
 }
 
-.container li {
-  list-style: none;
+.navbar {
+    text-align: center;
+    background-color: #4E6992;  
+    width: 100%;
+    height: 65px;
+    padding: 5px;
+    text-shadow: 2px 2px black;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
+a {
+    text-decoration: none;
+    color: #75FA61;
+
 }
 
-li#mainm {
-  border: 2px solid #e63946;
-  width: 20em;
-  padding: 2em;
-  position: relative;
-  left: 25em;
-  top: 15em;
+li {
+    display: inline;
+    padding: 40px;
+    font-size: 35px;
+
 }
 
-#mainm {
-  font-family: 'Open Sans', sans-serif;
-  color: #e63946;
-  font-size: 25px;
-  padding-left: 5px;
-  padding-top: 15px;
-  text-align: center;
+a:hover {
+    border-radius: 10px;
+    background-color: #DA4167;
+    color: white;
+    transition: 1s;
 }
 
-#mainm:hover {
-  transition: 2s;
-  border-radius: 15px;
-  border-color: #43aa8b;
-  color: white;
-  background-color: #43aa8b;
+
+
+#mainp {
+    color: #e0c3fc ;
+    font-family: 'Open Sans', sans-serif;
+    border: 3px solid white;
+    width: 60%;
+    height: 400px;
+    font-size: 35px;
+    font-weight: 500;
+    border-radius: 15px;
+    position: relative;
+    left: 400px;
+    top: 200px;
+    line-height: 60px;
+    text-shadow: 2px 2px black;
 }
+
