--- a/style.css
+++ b/style.css
@@ -10,22 +10,14 @@ body{
 }
 section{
     width: 100%;
-    height: 900px;
+    height: 35em;
     background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .borderbox{
-    border: 2px solid #e63946;
+    border: 0.1em solid #e63946;
     padding: 3em;
     color: #e63946;
-}
-
-.borderbox:hover{
-    background-color: #81b29a;
-    color: #f7ede2;
-    border-color: #81b29a;
-    border-radius: 10px;
-    transition: 2s;
 }
