--- a/style.css
+++ b/style.css
@@ -1,23 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,200&display=swap');
 *{
     margin: 0;
     padding: 0;
-    font-size: 25px;
-    font-family: 'Fredoka', sans-serif;
+    box-sizing: border-box;
 }
-body{
-    background-color: #1d3557;
+li{
+    display: inline;
+    padding: 15px;
+    position: relative;
+    top: 35px;
+}
+.nvbr{
+    width: 100%;
+    height: 100px;
+    background-color: #c1121f;
+}
+a{
+    color: #fdf0d5;
+    text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    font-size: 25px;
 }
 section{
-    width: 100%;
-    height: 35em;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   background-image: url(pp.jpg);
+   width: 100%;
+   height: 855px;
+   background-size: cover;
 }
-.borderbox{
-    border: 0.1em solid #e63946;
-    padding: 3em;
-    color: #e63946;
+.box1{
+    border: 2px solid #669bbc;
+    border-radius: 10px;
+    height: 400px;
+    width: 600px;
+}
+h1{
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    color: #780000;
+}
+p{
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 20px;
+    color: #fdf0d5;
+}
+.llive{
+        position: relative;
+        color: #669bbc;
+        text-decoration: none;
+        font-family: 'Lato', sans-serif;
+        font-size: 25px;
+        left: 1400px;
 }
