--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-image: url(pp.jpg);
+    background-size: cover;
+}
 li{
     display: inline;
     padding: 15px;
@@ -15,7 +19,7 @@ li{
 .nvbr{
     width: 100%;
     height: 100px;
-    background-color: #c1121f;
+    background-color: transparent;
 }
 a{
     color: #fdf0d5;
@@ -23,12 +27,7 @@ a{
     font-family: 'Lato', sans-serif;
     font-size: 25px;
 }
-section{
-   background-image: url(pp.jpg);
-   width: 100%;
-   height: 855px;
-   background-size: cover;
-}
+
 .box1{
     border: 2px solid #669bbc;
     border-radius: 10px;
