--- a/styles/style.css
+++ b/styles/style.css
@@ -7,48 +7,72 @@
     box-sizing: border-box;
 }
 body{
+    font-size: 24px;
     background-image: url(pp.jpg);
     background-size: cover;
 }
-li{
-    display: inline;
-    padding: 15px;
-    position: relative;
-    top: 35px;
-}
-.nvbr{
-    width: 100%;
-    height: 100px;
-    background-color: transparent;
+.navbar{
+    display: flex;
+    justify-content: center;
 }
 a{
-    color: #fdf0d5;
     text-decoration: none;
-    font-family: 'Lato', sans-serif;
     font-size: 25px;
+    font-family: 'Lato', sans-serif;
+    padding: 0.4em;
+    color: #fdf0d5;
+}
+ul,li{
+    list-style: none;
+    display: inline;
 }
 
-.box1{
-    border: 2px solid #669bbc;
-    border-radius: 10px;
-    height: 400px;
-    width: 600px;
+p{
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 20px;
+    color: #fdf0d5;
 }
 h1{
     font-family: 'Oswald', sans-serif;
     text-align: center;
     color: #780000;
 }
-p{
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 20px;
-    color: #fdf0d5;
+@media (min-width : 1024px){
+    .container{
+        border: 2px solid #669bbc;
+        border-radius: 10px;
+        height: 400px;
+        width: 600px;        
+    }
+    h1{
+        font-size: 40px;
+    }
 }
-.llive{
-        position: relative;
-        color: #669bbc;
-        text-decoration: none;
-        font-family: 'Lato', sans-serif;
-        font-size: 25px;
-        left: 1400px;
+@media (max-width: 479px){
+    h1{
+        font-size: 35px;
+    }
+    .container{
+        border: 2px solid #669bbc;
+        border-radius: 2%;
+        
+    }
+    body{        
+        background-size: inherit;
+    }
 }
+@media (max-width : 850px){
+    h1{
+        font-size: 35px;
+    }
+    .container{
+        border: 2px solid #669bbc;
+        border-radius: 2%;
+        
+    }
+    body{        
+        background-size: inherit;
+    }
+}
+
+
